--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,14 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/assets/images/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created for simulating a cinema"
     />
+    <link rel="stylesheet" href="./assets/styles/reset.css">
     <title>Cineflex</title>
   </head>
   <body>
